# Ferrite

./: .gitignore  CLAUDE.md  CONTRIBUTING.md  Makefile  README.md  TODO.md  project.yml
.claude/skills/: release.md
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.yml  feature_request.yml
.github/workflows/: ci.yml  release.yml
docs/: architecture.md  building.md  ffi.md
scripts/: build-rust.sh
src/rust/: Cargo.toml
src/rust/ferrite-ffi/: Cargo.toml  build.rs
src/rust/ferrite-ffi/src/: lib.rs  session_lazy.rs  types.rs
src/rust/ferrite-ffi/src/convert/: flags.rs  mod.rs  summary.rs
src/rust/ferrite-pe/: Cargo.toml
src/rust/ferrite-pe/src/: exception_handler.rs  il.rs  lib.rs
src/rust/ferrite-pe/src/assembly/: attributes.rs  convert.rs  format.rs  format_types.rs  instructions.rs  method_body.rs  mod.rs  parse_types.rs  resolve.rs  tests.rs  tree.rs  types.rs
src/rust/ferrite-pe/src/decompiler/: ast.rs  header.rs  lambda_builder.rs  members.rs  methods.rs  mod.rs  resolver.rs  (+1 more)
src/swift/Ferrite/: FerriteApp.swift  Info.plist
src/swift/Ferrite/AppIcon.icon/: icon.json
src/swift/Ferrite/Models/: ItemTag.swift  Project.swift  Selection.swift
src/swift/Ferrite/Services/: DecompilerService.swift  ItemTagService.swift  ProjectService+Persistence.swift  ProjectService.swift  SearchIndex.swift  SearchScoring.swift  SearchService.swift  UpdateService.swift
src/swift/Ferrite/Views/: ContentView.swift  ContentViewHelpers.swift
src/swift/FerriteFFI/: shim.c
src/swift/FerriteFFI/include/: ferrite_ffiFFI.h  module.modulemap
(+155 files in other folders)
